сделал темную тему с адаптивом

--- a/index.html
+++ b/index.html
@@ -55,12 +55,17 @@
                         </div>
                         <div class="about__center">
                             <div class="about__info">
+                                <h1 class="about__info-gdz">GDZ - решебник</h1>
                                 <h1 class="about__info-title">Готовые домашние </h1>
                                 <div class="about__info__well">Качественно</div>
                             </div> 
                             <div class="about__tutor">
                                 <div class="about__tutuor-img">
-                                    <img src="img/image.png" alt="фото учителя">
+                                    <picture>
+                                        <source media="(max-width: 560px)" srcset="img/imagemin.png">
+                                        <source media="(min-width: 561px)" srcset="img/image.png">
+                                        <img src="img/image.png" alt="Пример изображения">
+                                    </picture>
                                 </div>
                                 <div class="about__started">
                                     <div class="about__started-icon">
@@ -89,25 +94,73 @@
                             </div>                   
                         </div>
                         <div class="about__courses">
-                            <div class="about__box">
+                            <h2 class="about__courses-name">Онлайн - курсы</h2>
+                            <div class="about__box">                                
                                 <div class="about__item">
                                     <div class="about__item-img">
                                         <img src="img/photo1.png" alt="photo1">
                                     </div>
-                                    <div>
+                                    <div class="div__wrapper">
                                         <div class="about__item-title">Онлайн - курсы по подготовке к математике</div>
                                         <div class="about__item-hashtag">#ЕГЭ #ВПР #математика</div>
-                                        <div class="about__item-file">
+                                        <a href="#" class="about__item-file">
                                             <img src="icons/file.png" alt="логотп файл">
                                             <div class="about__item-file--text">Сборник правил и теории</div>
                                             <div class="about__item-file--arrow">
                                                 <img src="icons/Arrow-left.png" alt="стрелка влево">
                                             </div>  
-                                        </div>
+                                        </a>
+                                    </div>                                    
+                                </div>
+                                <div class="about__item">
+                                    <div class="about__item-img">
+                                        <img src="img/photo2.png" alt="photo1">
                                     </div>
-                                    
+                                    <div class="div__wrapper"> 
+                                        <div class="about__item-title">Онлайн - курсы по подготовке к английскому языку</div>
+                                        <div class="about__item-hashtag">#ЕГЭ #ВПР #математика</div>
+                                        <a href="#" class="about__item-file">
+                                            <img src="icons/file.png" alt="логотп файл">
+                                            <div class="about__item-file--text">Сборник правил и теории</div>
+                                            <div class="about__item-file--arrow">
+                                                <img src="icons/Arrow-left.png" alt="стрелка влево">
+                                            </div>  
+                                        </a>
+                                    </div>                                    
+                                </div>
+                                <div class="about__item">
+                                    <div class="about__item-img">
+                                        <img src="img/photo2.png" alt="photo1">
+                                    </div>
+                                    <div class="div__wrapper">
+                                        <div class="about__item-title">Курсы информационных технологий: C++, Python, Java..</div>
+                                        <div class="about__item-hashtag">#ЕГЭ #ВПР #математика</div>
+                                        <a href="#" class="about__item-file">
+                                            <img src="icons/file.png" alt="логотп файл">
+                                            <div class="about__item-file--text">Сборник правил и теории</div>
+                                            <div class="about__item-file--arrow">
+                                                <img src="icons/Arrow-left.png" alt="стрелка влево">
+                                            </div>  
+                                        </a>
+                                    </div>                                    
+                                </div>
+                                <div class="about__feedback">
+                                    <div class="about__feedback-questions">
+                                        <img src="img/feedback.png" alt="feedback">
+                                        <p class="about__feedback-questions--text">
+                                            Есть вопрос? Напиши!
+                                        </p>
+                                    </div>
+                                    <div class="about__feedback-elipse">
+                                        <img src="img/cat-elipse.png" alt="Элипск">
+                                    </div>
+                                    <div class="about__feedback-cat">
+                                        <img src="img/cat.png" alt="Элипск">
+                                    </div
                                 </div>
                             </div>
+                            </div>
+
                         </div>
                     </div>                   
                 </div>                
